# flaXx

./: .gitignore  .travis.yml  CMakeLists.txt  README  README.md
cmake/: FindDInput.cmake  FindDSound.cmake  FindDXGuid.cmake
docs/: Doxyfile  UML.dia
docs/report/: refs.bib  report.tex
docs/report/figures/: README
msvc/: flaXx.sln  flaXx.vcxproj  flaXx.vcxproj.filters
scenes/: test.flaxxml
src/: CMakeLists.txt  README  main.cpp
src/app/: flaXxMain.cpp  flaXxMain.h
src/math/: montecarlo.cpp  montecarlo.h  vector3f.cpp  vector3f.h
src/object/: #blinnphong.cpp#  blinnphong.cpp  blinnphong.h  cooktorrance.cpp  cooktorrance.h  diffuse.cpp  diffuse.h  material.h  object.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/render/: imageplane.cpp  imageplane.h  ray.h  render.cpp  render.h  tile.h
src/scene/: camera.cpp  camera.h  light.cpp  light.h  scene.cpp  scene.h
src/tests/: intersection_test.cpp  random_test.cpp  xml_test.cpp
src/util/: commandLineParser.cpp  commandLineParser.h  options.cpp  options.h  threading.h  xmlParser.cpp  xmlParser.h
